--- a/custom_components/wienerlinien/manifest.json
+++ b/custom_components/wienerlinien/manifest.json
@@ -1,12 +1,12 @@
 {
   "domain": "wienerlinien",
   "name": "Wienerlinien",
-  "version": "1.2.0",
-  "documentation": "https://github.com/tofuSCHNITZEL/home-assistant-wienerlinien",
-  "issue_tracker": "https://github.com/tofuSCHNITZEL/home-assistant-wienerlinien/issues",
+  "version": "1.3.0",
+  "documentation": "https://github.com/pringsen/home-assistant-wienerlinien",
+  "issue_tracker": "https://github.com/pringsen/home-assistant-wienerlinien/issues",
   "dependencies": [],
   "codeowners": [
-    "@tofuSCHNITZEL"
+    "@pringsen"
   ],
   "requirements": [],
   "iot_class": "cloud_polling"
